restyling the date filter

--- a/angularHTMLayout/lastModifiedObjects/lastModifiedObjects.ng.html
+++ b/angularHTMLayout/lastModifiedObjects/lastModifiedObjects.ng.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="cwPropertiesTableHeader CwPropertiesLayoutTableHeader">{{$root.i18n('homepage_last_updated_objects')}} <input type="date" id="dateID" name="input" ng-model="vm.selectedDate" placeholder="yyyy-MM-dd" /></div>
+  <div class="cwPropertiesTableHeader CwPropertiesLayoutTableHeader">{{$root.i18n('homepage_last_updated_objects')}} <input class="filterDate" type="date" id="dateID" name="input" ng-model="vm.selectedDate" placeholder="yyyy-MM-dd" /></div>
 
   <table class="cwPropertiesTable">
     <tbody>
