--- a/angularHTMLayout/coffee/homePage.ng.html
+++ b/angularHTMLayout/coffee/homePage.ng.html
@@ -13,8 +13,8 @@
   </div>
   <div ng-if="config.displayLastMdifiedObject" class="row bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('homepage_last_modified_objects_delay')}}</div>
-    <div class="row-cell row-cell-value ">
-      <input ng-model="config.delay" type="text" />
+    <div class="row-cell row-cell-value">
+      <input class="smallCell" ng-model="config.delay" type="number" />
     </div>
     <div class="row-cell row-cell-label">{{$root.i18n('homepage_last_modified_objects_delay2')}}</div>
   </div>
