--- a/angularHTMLayout/lastModifiedObjects/lastModifiedObjects.ng.html
+++ b/angularHTMLayout/lastModifiedObjects/lastModifiedObjects.ng.html
@@ -1,6 +1,9 @@
 <div>
-  <div class="cwPropertiesTableHeader CwPropertiesLayoutTableHeader">{{$root.i18n('homepage_last_updated_objects')}} <input class="filterDate" type="date" id="dateID" name="input" ng-model="vm.selectedDate" placeholder="yyyy-MM-dd" /></div>
-
+  <div class="cwPropertiesTableHeader CwPropertiesLayoutTableHeader">
+    {{$root.i18n('homepage_last_updated_objects')}}
+    <input class="filterDate smallCell" type="number" id="dateID" name="input" ng-model="vm.selectedDelay" />
+    {{$root.i18n('homepage_last_modified_objects_delay2')}}
+  </div>
   <table class="cwPropertiesTable">
     <tbody>
       <tr ng-repeat="o in objects | orderBy: 'date' : true | filter:filterDate">
