--- a/angularHTMLayout/coffee/checkEditModel.ng.html
+++ b/angularHTMLayout/coffee/checkEditModel.ng.html
@@ -5,7 +5,12 @@
       <select ng-change="updateCurrentView(currentView)" ng-options="v as (v.name + ' (' + v.cwView + ')')  for v in objectpages | orderBy:'name'" ng-model="currentView"></select>
     </div>
   </div>
-
+  <div class="row bootstrap-iso">
+    <div class="row-cell row-cell-label">{{$root.i18n('evolve_view_for_unicity_checking')}} :</div>
+    <div class="row-cell row-cell-value">
+      <select ng-options="v.cwView as (v.name + ' (' + v.cwView + ')')  for v in indexpages | orderBy:'name'" ng-model="config[currentView.cwView].unicityView"></select>
+    </div>
+  </div>
   <div class="cwPropertiesTableContainer">
     <div class="cwPropertiesTableHeader CwPropertiesLayoutTableHeader">
       {{$root.i18n('properties')}}
