--- a/angularHTMLayout/coffee/actionOnObjectPage.ng.html
+++ b/angularHTMLayout/coffee/actionOnObjectPage.ng.html
@@ -56,7 +56,7 @@
               <select ng-model="f.Operator" ng-options="x for x in FilterOperators"></select>
             </div>
             <div ng-if="f.id" class="filter-value filter-cell">
-              <input ng-model="f.Value" ng-if="getPropertyDataType(objectType, f.scriptname)==='text'" />
+              <input class="largeCell" ng-model="f.Value" ng-if="getPropertyDataType(objectType, f.scriptname)==='text'" />
               <input ng-model="f.Value" type="checkbox" ng-if="getPropertyDataType(objectType, f.scriptname)==='checkbox'" />
               <input ng-model="f.Value" type="date" ng-if="getPropertyDataType(objectType, f.scriptname)==='date'" />
               <input ng-model="f.Value" type="number" ng-if="getPropertyDataType(objectType, f.scriptname)==='number'" />
@@ -107,20 +107,20 @@
     </div>
     <div ng-if="op.type === 'cssClass'" class="row bootstrap-iso">
       <div class="row-cell row-cell-label">{{$root.i18n('hideElement_css_class')}} :</div>
-      <div class="row-cell row-cell-value">
-        <input type="text" ng-model="op.class" />
+      <div class="row-cell row-cell-value largeCell">
+        <input class="largeCell" type="text" ng-model="op.class" />
       </div>
     </div>
     <div ng-if="op.type === 'htmlId'" class="row bootstrap-iso">
       <div class="row-cell row-cell-label">{{$root.i18n('hideElement_html_id')}} :</div>
-      <div class="row-cell row-cell-value">
-        <input type="text" ng-model="op.htmlId" />
+      <div class="row-cell row-cell-value largeCell">
+        <input class="largeCell" type="text" ng-model="op.htmlId" />
       </div>
     </div>
     <div ng-if="op.type === 'jQuerySelector'" class="row bootstrap-iso">
       <div class="row-cell row-cell-label">{{$root.i18n('hideElement_jQuerySelector')}} :</div>
-      <div class="row-cell row-cell-value">
-        <input type="text" ng-model="op.jQuerySelector" />
+      <div class="row-cell row-cell-value ">
+        <input class="largeCell" type="text" ng-model="op.jQuerySelector" />
       </div>
     </div>
   </div>
