--- a/angularHTMLayout/coffee/actionOnObjectPage.ng.html
+++ b/angularHTMLayout/coffee/actionOnObjectPage.ng.html
@@ -6,7 +6,7 @@
     </div>
   </div>
   <div class="tabs">
-    <div ng-repeat="(i, op) in config[currentView.cwView] | orderBy:'Order'" ng-class="{active: op.selected == true}" class="tab-link tab-{{op.Id}}" ng-click="selectOperation(i)" data-id="{{op.Id}}">{{op.label}}</div>
+    <div ng-repeat="(i, op) in config[currentView.cwView] | orderBy:'order'" ng-class="{active: op.selected == true}" class="tab-link tab-{{op.Id}}" ng-click="selectOperation(i)" data-id="{{op.Id}}">{{op.label}}</div>
     <div class="add-tab-link">
       <a class="btn-add-operation btn page-action no-text" title="{{$root.i18n('label_add_operation')}}" ng-click="addOperation()"><i class="fa fa-plus" aria-hidden="true"></i></a>
     </div>
@@ -28,6 +28,13 @@
     <div class="bootstrap-iso row">
       <div class="row-cell row-cell-label">{{$root.i18n('label_order')}} :</div>
       <div class="row-cell row-cell-value"><input type="number" ng-model="op.order" /></div>
+    </div>
+    <div class="row bootstrap-iso">
+      <div class="row-cell row-cell-label">{{$root.i18n('hideElement_action_type')}} :</div>
+      <div class="row-cell row-cell-value" style="display:inline-flex">
+        <select ng-options="t as t for t in actionType" ng-model="op.actionType"></select>
+        <input ng-if="op.actionType === 'highlight'" type="color" ng-model="op.highlightColor" />
+      </div>
     </div>
     <div class="bootstrap-iso row">
       <div class="row-cell row-cell-label">{{$root.i18n('label_filter')}} :</div>
