--- a/angularHTMLayout/coffee/actionOnObjectPage.ng.html
+++ b/angularHTMLayout/coffee/actionOnObjectPage.ng.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="row bootstrap-iso">
+  <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('evolve_view')}} :</div>
     <div class="row-cell row-cell-value">
       <select ng-change="selectConfig()" ng-options="v as (v.name + ' (' + v.cwView + ')')  for v in objectpages | orderBy:'name'" ng-model="currentView"></select>
@@ -28,13 +28,6 @@
     <div class="bootstrap-iso row">
       <div class="row-cell row-cell-label">{{$root.i18n('label_order')}} :</div>
       <div class="row-cell row-cell-value"><input type="number" ng-model="op.order" /></div>
-    </div>
-    <div class="row bootstrap-iso">
-      <div class="row-cell row-cell-label">{{$root.i18n('hideElement_action_type')}} :</div>
-      <div class="row-cell row-cell-value" style="display:inline-flex">
-        <select ng-options="t as t for t in actionType" ng-model="op.actionType"></select>
-        <input ng-if="op.actionType === 'highlight'" type="color" ng-model="op.highlightColor" />
-      </div>
     </div>
     <div class="bootstrap-iso row">
       <div class="row-cell row-cell-label">{{$root.i18n('label_filter')}} :</div>
@@ -79,55 +72,91 @@
         </div>
       </div>
     </div>
-    <div class="row bootstrap-iso">
-      <div class="row-cell row-cell-label">{{$root.i18n('hideElement_type')}} :</div>
-      <div class="row-cell row-cell-value">
-        <select ng-options="t as t for t in typeOftarget" ng-model="op.type"></select>
+    <div class="rowFlex bootstrap-iso">
+      <div class="row-cell row-cell-label">{{$root.i18n('hideElement_action_type')}} :</div>
+      <div class="row-cell row-cell-value" style="display:inline-flex">
+        <select ng-options="t as t for t in actionType" ng-model="op.actionType"></select>
+        <input ng-if="op.actionType === 'highlight'" type="color" ng-model="op.highlightColor" />
       </div>
     </div>
-    <div class="row bootstrap-iso">
-      <div ng-if="op.type === 'tabs'" class="row-cell row-cell-value row-cell-max-width ">
-        <div class="cell-content-wrapper filter-wrapper propertieslist">
-          <div class="add-filter-button" ng-repeat="t in currentSchema.Tab.Tabs | orderBy:'name'">
-            <a class="btn-add-filter btn page-action" ng-class="op.tabs.indexOf(t.Id) !== -1? ['selected'] : []" ng-click="toggleArray(op.tabs,t.Id)">{{(t.Name + ' (' + t.Id + ')')}}</a>
+    <div ng-if="op.actionType !== 'displaymsg'">
+      <div class="row bootstrap-iso">
+        <div class="row-cell row-cell-label">{{$root.i18n('hideElement_type')}} :</div>
+        <div class="row-cell row-cell-value">
+          <select ng-options="t as t for t in typeOftarget" ng-model="op.type"></select>
+        </div>
+      </div>
+      <div class="row bootstrap-iso">
+        <div ng-if="op.type === 'tabs'" class="row-cell row-cell-value row-cell-max-width ">
+          <div class="cell-content-wrapper filter-wrapper propertieslist">
+            <div class="add-filter-button" ng-repeat="t in currentSchema.Tab.Tabs | orderBy:'name'">
+              <a class="btn-add-filter btn page-action" ng-class="op.tabs.indexOf(t.Id) !== -1? ['selected'] : []" ng-click="toggleArray(op.tabs,t.Id)">{{(t.Name + ' (' + t.Id + ')')}}</a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="row bootstrap-iso">
-      <div ng-if="op.type === 'views'" class="row-cell row-cell-value row-cell-max-width ">
-        <div class="cell-content-wrapper filter-wrapper propertieslist">
-          <div class="add-filter-button" ng-repeat="v in currentRedirectViews | orderBy:'name'">
-            <a class="btn-add-filter btn page-action" ng-class="op.views.indexOf(v.cwView) !== -1? ['selected'] : []" ng-click="toggleArray(op.views,v.cwView)">{{(v.name + ' (' + v.cwView + ')')}}</a>
+      <div class="row bootstrap-iso">
+        <div ng-if="op.type === 'views'" class="row-cell row-cell-value row-cell-max-width ">
+          <div class="cell-content-wrapper filter-wrapper propertieslist">
+            <div class="add-filter-button" ng-repeat="v in currentRedirectViews | orderBy:'name'">
+              <a class="btn-add-filter btn page-action" ng-class="op.views.indexOf(v.cwView) !== -1? ['selected'] : []" ng-click="toggleArray(op.views,v.cwView)">{{(v.name + ' (' + v.cwView + ')')}}</a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="row bootstrap-iso">
-      <div ng-if="op.type === 'propertygroups'" class="row-cell row-cell-value row-cell-max-width ">
-        <div class="cell-content-wrapper filter-wrapper propertieslist">
-          <div class="add-filter-button" ng-repeat="p in rootNode.PropertiesGroups | orderBy:'name'">
-            <a class="btn-add-filter btn page-action" ng-class="op.propertygroups.indexOf(p.id) !== -1? ['selected'] : []" ng-click="toggleArray(op.propertygroups,p.id)">{{(p.name + ' (' + p.id + ')')}}</a>
+      <div class="row bootstrap-iso">
+        <div ng-if="op.type === 'propertygroups'" class="row-cell row-cell-value row-cell-max-width ">
+          <div class="cell-content-wrapper filter-wrapper propertieslist">
+            <div class="add-filter-button" ng-repeat="p in rootNode.PropertiesGroups | orderBy:'name'">
+              <a class="btn-add-filter btn page-action" ng-class="op.propertygroups.indexOf(p.id) !== -1? ['selected'] : []" ng-click="toggleArray(op.propertygroups,p.id)">{{(p.name + ' (' + p.id + ')')}}</a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div ng-if="op.type === 'cssClass'" class="row bootstrap-iso">
-      <div class="row-cell row-cell-label">{{$root.i18n('hideElement_css_class')}} :</div>
-      <div class="row-cell row-cell-value largeCell">
-        <input class="largeCell" type="text" ng-model="op.class" />
+      <div ng-if="op.type === 'cssClass'" class="row bootstrap-iso">
+        <div class="row-cell row-cell-label">{{$root.i18n('hideElement_css_class')}} :</div>
+        <div class="row-cell row-cell-value largeCell">
+          <input class="largeCell" type="text" ng-model="op.class" />
+        </div>
+      </div>
+      <div ng-if="op.type === 'htmlId'" class="row bootstrap-iso">
+        <div class="row-cell row-cell-label">{{$root.i18n('hideElement_html_id')}} :</div>
+        <div class="row-cell row-cell-value largeCell">
+          <input class="largeCell" type="text" ng-model="op.htmlId" />
+        </div>
+      </div>
+      <div ng-if="op.type === 'jQuerySelector'" class="row bootstrap-iso">
+        <div class="row-cell row-cell-label">{{$root.i18n('hideElement_jQuerySelector')}} :</div>
+        <div class="row-cell row-cell-value ">
+          <input class="largeCell" type="text" ng-model="op.jQuerySelector" />
+        </div>
       </div>
     </div>
-    <div ng-if="op.type === 'htmlId'" class="row bootstrap-iso">
-      <div class="row-cell row-cell-label">{{$root.i18n('hideElement_html_id')}} :</div>
-      <div class="row-cell row-cell-value largeCell">
-        <input class="largeCell" type="text" ng-model="op.htmlId" />
+    <div ng-if="op.actionType === 'displaymsg'">
+      <div class="bootstrap-iso rowFlex">
+        <div class="row-cell row-cell-label">{{$root.i18n('image_url')}} :&nbsp;</div>
+        <div class="row-cell row-cell-value"><input class="largeCell" ng-model="op.imageUrl" /></div>
       </div>
-    </div>
-    <div ng-if="op.type === 'jQuerySelector'" class="row bootstrap-iso">
-      <div class="row-cell row-cell-label">{{$root.i18n('hideElement_jQuerySelector')}} :</div>
-      <div class="row-cell row-cell-value ">
-        <input class="largeCell" type="text" ng-model="op.jQuerySelector" />
+      <div class="bootstrap-iso rowFlex">
+        <div class="row-cell row-cell-label">{{$root.i18n('fontawesome_icon')}} :&nbsp;</div>
+        <div class="row-cell row-cell-value" style="display: flex; overflow: visible">
+          <select id="{{'action_on_page_' + i}}" ng-include src="'../../common/html/coffee/fa.html'" data-width="150px" data-live-search="true" class="fa" ng-init="bootstrapFilter('action_on_page_' + i)" ng-model="op.fontAwesome.icon" />
+          <input type="color" ng-model="op.fontAwesome.color" />
+        </div>
+      </div>
+      <div class="bootstrap-iso rowFlex">
+        <div class="row-cell row-cell-label">{{$root.i18n('html_text')}} :&nbsp;</div>
+        <div class="row-cell row-cell-value row-cell-value-textarea"><textarea ng-model="op.htmlMessage"></textarea></div>
+      </div>
+      <div class="bootstrap-iso">
+        <div class="row-cell row-cell-label">{{$root.i18n('result_preview')}} :&nbsp;</div>
+        <div class="cw-visible CwPropertiesLayoutHelpText">
+          <span>
+            <i ng-style="{'color' : op.fontAwesome.color}" ng-if="op.fontAwesome.icon" ng-class="op.fontAwesome.icon" aria-hidden="true"></i>
+            <img ng-if="op.imageUrl" src="{{op.imageUrl}}" aria-hidden="true" />
+            {{op.htmlMessage}}
+          </span>
+        </div>
       </div>
     </div>
   </div>
