--- a/angularHTMLayout/coffee/homePage.ng.html
+++ b/angularHTMLayout/coffee/homePage.ng.html
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div ng-if="config.displayDescription" class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('homepage_displaydescriptionSelect')}}</div>
+    <div class="row-cell row-cell-label">{{$root.i18n('homepage_displaydescriptionSelect')}} :</div>
     <div class="row-cell row-cell-value">
       <select ng-options="o.scriptName as o.name for o in OT" ng-model="config.descriptionObjectTypeScriptname" ng-change="getObjects(config.descriptionObjectTypeScriptname)"></select>
     </div>
