--- a/angularHTMLayout/coffee/homePage.ng.html
+++ b/angularHTMLayout/coffee/homePage.ng.html
@@ -29,7 +29,7 @@
   <div ng-if="config.displayLastMdifiedObject" class="row bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('homepage_last_modified_objects_delay')}}</div>
     <div class="row-cell row-cell-value">
-      <input class="smallCell" ng-model="config.delay" />
+      <input class="mediumCell" ng-model="config.delay" />
     </div>
     <div class="row-cell row-cell-label">{{$root.i18n('homepage_last_modified_objects_delay2')}}</div>
   </div>
@@ -44,7 +44,7 @@
     </div>
   </div>
   <div ng-if="config.displayLastMdifiedObject" class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">Custom Display String of</div>
+    <div class="row-cell row-cell-label">Custom Display String</div>
     <div class="row-cell row-cell-value">
       <select ng-options="objectTypes[s].name for s in OTsSelected | orderBy:sortOT" ng-model="cdsSelected"></select>
     </div>
